# stupid_cmake

./: CMakeLists.txt  README.md  main.cpp
pow/: CMakeLists.txt  pow.cpp  pow.h
sqrt/: CMakeLists.txt  sqrt.cpp  sqrt.h
